# metagenome_vector_sketches

./: .gitmodules  CMakeLists.txt  Makefile  README.md  advanced_counting.py  compute_error_of_random_projections.py  convert_to_zarr.cpp  count_to_1000.py  jaccard.cpp  jaccard.py  pairwise_comp_optimized.cpp  pca_gut.py  pca_tara.py  query_ava_matrix.cpp
include/: read_pc_mat.h
src/: bindings.cpp  compute_error_of_random_projections.py  pairwise_comp_optimized.cpp  pairwise_comp_optimized_16.cpp  pairwise_comp_optimized_16bits.cpp  project_everything.cpp  query_ava_matrix.cpp  query_pc_mat.cpp  read_pc_mat.cpp  read_pc_mat.py  read_pc_mat_cmp.cpp
test/: col_file.txt  row_file.txt
